hphp/hack/test/typecheck/inout/bad_inout_decl_byref1.php
<?hh

function test(inout int &$i): void {}
